<resources>
    <string name="app_name">DogHelper</string>
    <string name="name">Кличка</string>
    <string name="age">Возраст</string>
    <string name="rewards">Нет наград</string>
    <string name="documents">документы</string>
    <string name="calendar">календарь</string>
    <string name="health">здоровье</string>
    <string name="competitions">соревнования</string>
    <string name="diary">воспоминания</string>
    <string name="training">дрессировка</string>
    <string name="registration">регистрация</string>
    <string name="entering">вход</string>
    <string name="telephone_number">номер телефона</string>
    <string name="enter_password">введите пароль</string>
    <string name="repeat_password">повторите пароль</string>
    <string name="training_title">дрессировка</string>
    <string name="commands">команды</string>
    <string name="com_done">выученные</string>
    <string name="com_plan">в планах</string>
    <string name="com_process">в процессе</string>
    <string name="competitions_title">соревнования</string>
    <string name="diary_title">воспоминания</string>
    <string name="photogallery">фотогалерея</string>
    <string name="videogallery">видеогалерея</string>
    <string name="notes">заметки</string>
    <string name="farewell">Сохраните самые светлые моменты</string>
    <string name="learned">выученные</string>
    <string name="add">добавить</string>
    <string name="planned">в планах</string>
    <string name="processed">в процессе</string>
    <string name="comp_nd_exhib">выставки и соревнования</string>
    <string name="add_competition">добавить соревнование</string>
    <string name="note">заметка</string>
    <string name="add_note">добавить заметку</string>
    <string name="photo">фотогалерея</string>
    <string name="video">видеогалерея</string>
    <string name="documents_title">документы</string>
    <string name="doc_registration">свидетельство о регистрации</string>
    <string name="doc_family">свидетельство о происхождении</string>
    <string name="PDF_format">В формате PDF</string>
    <string name="upload">загрузить</string>
    <string name="download">скачать</string>
    <string name="open">открыть</string>
    <string name="vetpasport">ветеринарный паспорт</string>
    <string name="metrica">метрика щенка</string>
    <string name="international_vetpasport">Международный ветеринарный паспорт</string>
    <string name="electro_format">В электронном формате</string>
    <string name="puppy_card">Метрика щенка (Puppy Card)</string>
    <string name="owner">1. Владелец</string>
    <string name="save">сохранить</string>
    <string name="next"><![CDATA[->]]></string>
    <string name="discribing">2. Описание</string>
    <string name="previous"><![CDATA[<-]]></string>
    <string name="identify">3. Идентификация</string>
    <string name="chip_date">дата чипирования</string>
    <string name="chip_number">номер микрочипа</string>
    <string name="chip_location">расположение микрочипа</string>
    <string name="tatoo_number">номер татуировки</string>
    <string name="tatoo_date">дата татуирования</string>
    <string name="kleimo_number">номер клейма</string>
    <string name="kleimo_date">дата клеймирования</string>
    <string name="pet_poroda">ПОРОДА</string>
    <string name="pet_name">КЛИЧКА</string>
    <string name="pet_sex">ПОЛ</string>
    <string name="pet_birthday">ДАТА РОЖДЕНИЯ</string>
    <string name="pet_color">ОКРАС</string>
    <string name="index">индекс</string>
    <string name="house">дом</string>
    <string name="flat">кв</string>
    <string name="street">УЛИЦА</string>
    <string name="owner_surname">ФАМИЛИЯ</string>
    <string name="owner_name">ИМЯ</string>
    <string name="county">СТРАНА</string>
    <string name="city">ГОРОД</string>
    <string name="father">Отец</string>
    <string name="mother">Мать</string>
    <string name="RKF">номер РКФ</string>
    <string name="breeder">Заводчик</string>
    <string name="FIO">ФИО</string>
    <string name="address">АДРЕС</string>
    <string name="owner_in_metrics">Владелец</string>
    <string name="brak">Отбракован</string>
    <string name="brak_reason">Причина отбраковки</string>
    <string name="No">Нет</string>
    <string name="yes">Да</string>
    <string name="choose_profile">Выберите профиль питомца</string>
    <string name="delete_profile">Удалить профиль</string>
    <string name="create_profile">Добавить профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>