<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/metrica_title"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            android:background="@color/medium_mint"
            android:gravity="center"
            android:text="@string/puppy_card"
            android:textColor="@color/text"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/puppy_poroda"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_poroda"/>

        <EditText
            android:id="@+id/puppy_name"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_name"/>

        <EditText
            android:id="@+id/puppy_date"
            android:layout_width="370dp"
            android:gravity="center"
            android:inputType="date"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_birthday"/>

        <EditText
            android:id="@+id/puppy_sex"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_sex"/>

        <EditText
            android:id="@+id/puppy_color"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_color"/>

        <EditText
            android:id="@+id/puppy_kleimo"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/kleimo_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/father"
            android:textSize="30dp"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/father_name"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_name"/>

        <EditText
            android:id="@+id/RKF_number_father"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/RKF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mother"
            android:textSize="30dp"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/mother_name"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/pet_name"/>

        <EditText
            android:id="@+id/RKF_number_mother"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/RKF"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breeder"
            android:textSize="30dp"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/breeder_FIO"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/FIO"/>

        <EditText
            android:id="@+id/breeder_address1"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_in_metrics"
            android:textSize="30dp"
            android:textColor="@color/text"/>

        <EditText
            android:id="@+id/owner_FIO"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/FIO"/>

        <EditText
            android:id="@+id/owner_address1"
            android:layout_width="370dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brak"
            android:textSize="30dp"
            android:textColor="@color/text"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/yes"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/brak_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/brak_reason" />

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:text="@string/No"
                android:layout_weight="1" />
        </RadioGroup>

        <Button
            android:id="@+id/save_metrica"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/medium_mint"
            android:text="@string/save"
            android:textColor="@color/text"
            android:textSize="26dp" />
    </LinearLayout>
</ScrollView>