<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vetpassport_page2"
    android:background="@color/background">

    <TextView
        android:id="@+id/int_passport"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@color/medium_mint"
        android:gravity="center"
        android:text="@string/international_vetpasport"
        android:textColor="@color/text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/discribing"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="132dp"
        android:background="@color/medium_mint"
        android:gravity="center"
        android:text="@string/discribing"
        android:textColor="@color/text"
        android:textSize="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pet_color"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:gravity="center"
        android:hint="@string/pet_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribing" />

    <EditText
        android:id="@+id/pet_poroda"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:gravity="center"
        android:hint="@string/pet_poroda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribing" />

    <EditText
        android:id="@+id/pet_name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/pet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribing" />

    <EditText
        android:id="@+id/pet_sex"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:hint="@string/pet_sex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribing" />

    <EditText
        android:inputType="date"
        android:id="@+id/pet_birthday"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        android:gravity="center"
        android:hint="@string/pet_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribing" />

    <Button
        android:id="@+id/save_discribing"
        android:layout_width="204dp"
        android:layout_height="80dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/medium_mint"
        android:text="@string/save"
        android:textColor="@color/text"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_to_identify" />

    <Button
        android:id="@+id/next_to_identify"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginBottom="37dp"
        android:backgroundTint="@color/brown"
        android:text="@string/next"
        android:textColor="@color/light_mint"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>