<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vetpassport_page3"
    android:background="@color/background">

    <TextView
        android:id="@+id/int_passport"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="44dp"
        android:background="@color/medium_mint"
        android:gravity="center"
        android:text="@string/international_vetpasport"
        android:textColor="@color/text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/identify"
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="132dp"
        android:background="@color/medium_mint"
        android:gravity="center"
        android:text="@string/identify"
        android:textColor="@color/text"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/chip_location"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:hint="@string/chip_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/chip_num"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:hint="@string/chip_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/chip_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:hint="@string/chip_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/kleimo_num"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:gravity="center"
        android:hint="@string/kleimo_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/kleimo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="296dp"
        android:gravity="center"
        android:hint="@string/kleimo_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/tatoo_num"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:gravity="center"
        android:hint="@string/tatoo_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <EditText
        android:id="@+id/tatoo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:gravity="center"
        android:hint="@string/tatoo_date"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/identify" />

    <Button
        android:id="@+id/save_identify"
        android:layout_width="204dp"
        android:layout_height="80dp"
        android:layout_marginBottom="44dp"
        android:backgroundTint="@color/medium_mint"
        android:text="@string/save"
        android:textColor="@color/text"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>